kyverno/baseline/require-non-root/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-non-root-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-non-root
    rule: check-run-as-non-root
    resource: pod-running-as-root
    namespace: team-alpha
    kind: Pod
    result: fail
  - policy: require-non-root
    rule: check-run-as-non-root
    resource: pod-no-security-context
    namespace: team-alpha
    kind: Pod
    result: fail
  - policy: require-non-root
    rule: check-run-as-non-root
    resource: pod-run-as-non-root-flag
    namespace: team-alpha
    kind: Pod
    result: pass
  - policy: require-non-root
    rule: check-run-as-non-root
    resource: pod-run-as-uid-1000
    namespace: team-alpha
    kind: Pod
    result: pass
